Added more projects
game_of_life, roman_numerals, lal_test, matrixfun, list, stiffness, dry_martini, conversions, changing_defaults

--- a/ageindays/Makefile
+++ b/ageindays/Makefile
@@ -1,5 +1,5 @@
-ageindays.exe: src/*
-	gnatmake src/*
+ageindays.exe:
+	gprbuild -d -p -g
 
 regenerate_tests: src/*
 	gnattest -Pageindays.gpr --harness-dir=../testharness --tests-dir=../tests
